[gd_scene load_steps=4 format=3 uid="uid://cconua6dcpkbq"]

[ext_resource type="Script" path="res://scripts/appearing_spike_fixed.gd" id="1_fy18o"]
[ext_resource type="Texture2D" uid="uid://cayklemintmd1" path="res://assets/sprites (others)/spikes-for-game.png" id="1_mbf5h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_www86"]
size = Vector2(16, 59)

[node name="appearing_spike_fixed" type="Area2D"]
script = ExtResource("1_fy18o")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_mbf5h")
region_enabled = true
region_rect = Rect2(13.5543, 46.0661, 14.7884, 15.5952)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -6, -8, 7, 8, 7)

[node name="TriggerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea"]
position = Vector2(0, -22.5)
shape = SubResource("RectangleShape2D_www86")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="TriggerArea" to="." method="_on_trigger_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
